--- a/TVTrackWeb/appsettings.json
+++ b/TVTrackWeb/appsettings.json
@@ -1,9 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Neo4j": {
+        "Uri": "bolt://localhost:5260",
+        "Username": "neo4j",
+        "Password": "Politecnica"
     }
-  },
-  "AllowedHosts": "*"
 }
