--- a/TVTrackWeb/TVTrackWeb.csproj
+++ b/TVTrackWeb/TVTrackWeb.csproj
@@ -5,6 +5,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="ChartJs.Blazor" Version="1.1.0" />
 	  <PackageReference Include="Neo4j.Driver" Version="5.27.0" />
 	</ItemGroup>
 
